# comfy-nodes-test

./: .gitignore  README.md  __init__.py  instructions.txt  pyproject.toml
batch_label/: __init__.py  __main__.py  cli.py  client.py  comfy_node.py  config.py  discovery.py  image_prep.py  messages.py  pipeline.py  presets.py  types.py
batch_label/prompt_presets/: detailed_description.txt  diffusion_json_blueprint.txt  nano_banana_json_blueprint.txt  ocr_text_and_scene.txt  short_caption.txt
tests/: test_integration.py  test_unit.py
